Drobne zmiany wyglądu

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>Saper</title>
     </head>
     <body oncontextmenu="return false">
+        <footer>© Marcin Nowak</footer>
         <div class="menu">
             <input class="restart" type="button" value="Restart" id="restartButton" onclick="restartDivButton(), timerStopResetButton()">
             <div><img id="flagIcon" src="images/flag2.gif"></div><div id="flagValue" class="flags">0</div>
