--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="menu">
             <input class="restart" type="button" value="Restart" id="restartButton" onclick="restartDivButton(), timerStopResetButton()">
             <div><img id="flagIcon" src="images/flag2.gif"></div><div id="flagValue" class="flags">0</div>
-            <div><img id="clockIcon" src="images/clock.png"></div><div id="clockValue" class="clock">0</div>
+            <div><img id="clockIcon" src="images/clock.png"></div><div id="clockValue" class="clock">0</div><span class="seconds">s</span>
             <div class="speaker"><img id="musicIcon" src="images/musicon.png" onclick="musicOnOff()"></div>
         </div>
         <div class="submenu">
