--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         </div>
         <div class="submenu">
             <div>Przekątna pól:
-            <input id="numberIloscKwadratow" type="number" min="5" max="20" class="numbersubmenu" onchange="checkNumbersPola(), restartDivButton(), flagCounter()">
+            <input id="numberIloscKwadratow" type="number" min="5" max="20" class="numbersubmenu" onchange="checkNumbersPola(), restartDivButton(), flagCounter(), timerStopResetButton()">
             Ilość bomb:
-            <input id="numberIloscBomb" type="number" min="3" max="20" class="numbersubmenu" onchange="checkNumbersBombs(), restartDivButton(), flagCounter()"></div>
+            <input id="numberIloscBomb" type="number" min="3" max="20" class="numbersubmenu" onchange="checkNumbersBombs(), restartDivButton(), flagCounter(), timerStopResetButton()"></div>
         </div>
         <div class="winmessage" id="winmessage">Zwycięstwo!</div>
         <div class="losemessage" id="losemessage" hidden>Porażka</div> 
@@ -168,6 +168,9 @@
                         flagCountDown.innerHTML = flagCountDownPom + 1;
                         flagCountDownPom++;
                     }
+                }
+                else if(event.button == 0 && document.getElementById("cell" + x + "x" + y).getAttribute("style") == "background-image: url(images/flag.gif); background-repeat: no-repeat; background-size: cover;"){
+                    alert("Nie możesz sprawdzić oflagowanego pola");
                 }
             }
             //Tworzenie tabeli w Arrayce
