--- a/index.html
+++ b/index.html
@@ -170,7 +170,10 @@
                     }
                 }
                 else if(event.button == 0 && document.getElementById("cell" + x + "x" + y).getAttribute("style") == "background-image: url(images/flag.gif); background-repeat: no-repeat; background-size: cover;"){
-                    alert("Nie możesz sprawdzić oflagowanego pola");
+                    return null;
+                }
+                else{
+                    checkClick(x, y);
                 }
             }
             //Tworzenie tabeli w Arrayce
@@ -201,7 +204,7 @@
                         cell.setAttribute("class", "divTableCell");
                         cell.setAttribute("id", ("cell" + i + "x" + j));
                         cell.setAttribute("style", "background-image: url(images/hidden.png); background-repeat: no-repeat; background-size: cover;");
-                        cell.setAttribute("onclick", ("checkClick(" + i + ", " + j + ")"));
+                        //cell.setAttribute("onclick", ("checkClick(" + i + ", " + j + ")"));
                         cell.setAttribute("onmousedown", ("buttonCheck(event," + i + ", " + j + ")"));
 
                         tableRow.appendChild(cell);
