--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
                         highScoreCounter = highScoreCounter.length + 1;
                         highScroeArray = lastHighScore.innerHTML.split("<br>");
                     }
+                    else{
+                        highScoreCounter = 1;
+                    }
                 }
             }
             //Dodanie wyników
